--- a/jenkins-design-language/less/components/expandable-path.less
+++ b/jenkins-design-language/less/components/expandable-path.less
@@ -1,3 +1,5 @@
+
+
 .expandable-path {
     display: inline-flex;
     vertical-align: middle;
@@ -38,6 +40,10 @@
             }
 
             svg {
+                fill: rgba(0, 0, 0, 0.5);
+            }
+
+            .ContentPageHeader-main & svg {
                 fill: rgba(255, 255, 255, 0.5);
             }
         }
