--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -16,8 +16,8 @@
     bottom: auto;
 }
 
-.btn-show-more {
-    display: table;
+button.btn-show-more {
+    display: flex;
     margin: 10px auto;
 }
 
