--- a/blueocean-core-js/src/less/run-button.less
+++ b/blueocean-core-js/src/less/run-button.less
@@ -37,6 +37,14 @@
                 position: absolute;
                 top: 0;
                 left: 0;
+
+                .ParametersRunButton & {
+                    fill: rgba(53, 64, 82, 0.25);
+                    
+                    &:hover {
+                        fill: #4a90e2;
+                    }
+                }
             }
         }
 
