fix favourites run button colour that was broken in #1539

--- a/blueocean-core-js/src/less/run-button.less
+++ b/blueocean-core-js/src/less/run-button.less
@@ -45,6 +45,14 @@
                         fill: #4a90e2;
                     }
                 }
+
+                .favorites-card-stack & {
+                    fill: #ffffff;
+                    
+                    &:hover {
+                        fill: #ffffff;
+                    }
+                }
             }
         }
 
