fix mail link and folder colours

--- a/blueocean-personalization/src/main/less/pipeline-card.less
+++ b/blueocean-personalization/src/main/less/pipeline-card.less
@@ -12,6 +12,10 @@
     a {
         color: white;
         cursor: pointer;
+
+        &:hover {
+            color: white;
+        }
     }
 
     .name, .branch, .commit, .time {
