--- a/jenkins-design-language/less/components/expandable-path.less
+++ b/jenkins-design-language/less/components/expandable-path.less
@@ -41,6 +41,10 @@
 
             svg {
                 fill: rgba(0, 0, 0, 0.5);
+
+                .favorites-card-stack & {
+                    fill: #ffffff;
+                }
             }
 
             .ContentPageHeader-main & svg {
