--- a/jenkins-design-language/less/components/expandable-path.less
+++ b/jenkins-design-language/less/components/expandable-path.less
@@ -47,7 +47,7 @@
                 }
             }
 
-            .ContentPageHeader-main & svg {
+            .BasicHeader & svg {
                 fill: rgba(255, 255, 255, 0.5);
             }
         }
