--- a/jenkins-design-language/less/components/jtable.less
+++ b/jenkins-design-language/less/components/jtable.less
@@ -105,10 +105,20 @@ a.JTable-row--href {
 }
 
 .JTable-cell-contents {
-    width:100%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    > code,
+    .text-with-ellipsis-container {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 .JTable-header {
