--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -17,6 +17,8 @@
 @font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-header: "LatoLatinWebMedium", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
+@child-indent-size: 24px;
+
 // TODO: Make these ^^^ use the JDL variables
 
 .pipeline-editor {
@@ -351,10 +353,6 @@
         &:hover, &:active, &:focus {
             background: @light-blue-bg;
         }
-
-        &:hover .editor-step-drag {
-            display: flex;
-        }
     }
 
     .editor-step .editor-step .editor-step-main { // nested steps
@@ -363,7 +361,7 @@
     }
 
     .editor-step.nested .editor-step-main { // child steps
-        border-left-width: 24px;
+        border-left-width: @child-indent-size;
         position: relative;
     }
 
@@ -476,6 +474,12 @@
         }
     }
 
+    .editor-steps > .editor-step:first-child > .editor-step-main > div > .editor-step-child-icon {
+        margin-top: -8px;
+    }
+
+    //--[ Step Drag and Drop ]----------------------------------------------------------------------------------------------------
+
     .editor-step-drag {
         position: absolute;
         top: 0;
@@ -483,17 +487,56 @@
         bottom: 0;
         cursor: -webkit-grab;
 
-        display: none;
+        display: flex;
         align-items: center;
 
         svg {
             fill: @grab-color;
             margin-right: 6px;
         }
+        // hide by default
+        display: none;
     }
 
-    .editor-steps > .editor-step:first-child > .editor-step-main > div > .editor-step-child-icon {
-        margin-top: -8px;
+    .editor-step-list-drop-zone {
+        position: relative;
+        width: 100%;
+        height: 31px;
+        display: flex;
+        align-items: center;
+        padding-left: 16px;
+        border-style: solid;
+        border-color: @hr-color;
+        border-width: 0 0 1px @child-indent-size;
+        color: @hr-color;
+        // hide by default
+        display: none;
+    }
+
+    .editor-step-content, .editor-step-list-drop-zone {
+        &.is-dragged-over {
+            background-color: @light-blue-bg;
+            box-shadow: inset 0 1px 0 @brand-color;
+        }
+    }
+
+    .editor-step-content:hover .editor-step-drag {
+        display: flex;
+    }
+
+    .editor-steps-dragging-active {
+        .editor-step-list-drop-zone {
+            display: flex;
+        }
+    }
+
+    .editor-steps > .editor-step-list-drop-zone {
+        background: #fff;
+        border-width: 0 1px 1px 1px;
+
+        .editor-step-child-icon {
+            display: none;
+        }
     }
 
 
