--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -18,6 +18,7 @@
 @font-family-header: "LatoLatinWebMedium", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @child-indent-size: 24px;
+@padding-step: 11px 16px;
 
 // TODO: Make these ^^^ use the JDL variables
 
@@ -345,7 +346,7 @@
     }
 
     .editor-step-content {
-        padding: 11px 16px;
+        padding: @padding-step;
         cursor: pointer;
         position: relative;
         border-bottom: 1px solid @hr-color;
@@ -501,10 +502,9 @@
     .editor-step-list-drop-zone {
         position: relative;
         width: 100%;
-        height: 31px;
         display: flex;
         align-items: center;
-        padding-left: 16px;
+        padding: @padding-step;
         border-style: solid;
         border-color: @hr-color;
         border-width: 0 0 1px @child-indent-size;
@@ -530,6 +530,9 @@
     }
 
     .editor-steps-dragging-active {
+        .editor-step.nested.missing .editor-step-content {
+            display: none;
+        }
         .editor-step-list-drop-zone {
             display: flex;
         }
