implement PR suggestions

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -127,9 +127,7 @@ main {
 
         .result-item-label-desc {
             max-height: 16px;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
+            text-overflow();
         }
 
         .result-item-label-name {
