--- a/jenkins-design-language/less/components/jtable.less
+++ b/jenkins-design-language/less/components/jtable.less
@@ -109,15 +109,11 @@ a.JTable-row--href {
     align-items: center;
     width: 100%;
     height: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow();
 
     > code,
     .text-with-ellipsis-container {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        text-overflow();
     }
 }
 
