--- a/blueocean-dashboard/src/main/less/mixins/text-overflow.less
+++ b/blueocean-dashboard/src/main/less/mixins/text-overflow.less
@@ -1,5 +1,6 @@
 // Text overflow
 // Requires inline-block or block for proper styling
+// Works with flexbox as well as long as the min-width property is set to something else than the default 100% that is set for flexbox
 
 .text-overflow() {
   overflow: hidden;
