--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -127,7 +127,7 @@ main {
 
         .result-item-label-desc {
             max-height: 16px;
-            text-overflow();
+            .text-overflow();
         }
 
         .result-item-label-name {
