--- a/blueocean-dashboard/src/main/less/run-details-header.less
+++ b/blueocean-dashboard/src/main/less/run-details-header.less
@@ -31,7 +31,7 @@
         &.causes {
             display: block;
             max-width: 99.99%;
-            text-overflow();
+            .text-overflow();
         }
 
         svg+* {
@@ -67,7 +67,7 @@
             position: relative;
             display: block;
             padding-right: 17px;
-            text-overflow();
+            .text-overflow();
 
             svg {
                 display: block;
