--- a/blueocean-dashboard/src/main/less/run-message-cell.less
+++ b/blueocean-dashboard/src/main/less/run-message-cell.less
@@ -9,32 +9,38 @@
     .RunMessageCellInner > span {
         display: flex;
         flex: 1;
-        width: 100%;
+        max-width: 100%;
         height: 100%;
+        .text-overflow();
 
         a {
             display: flex;
-            flex: 0 0 auto;
+            flex: 0 1 auto;
             align-items: center;
             height: 100%;
-            min-width: 0;
+            max-width: 100%;
+            .text-overflow();
+
+            &:first-child {
+                flex-shrink: 0;
+            }
 
             &:last-child {
                 flex-grow: 1;
-                text-overflow();
+                flex-shrink: 0;
 
                 &:not(:first-child) > .ellipsis-text {
-                    width: 10px;
+                    width: 1px;
                 }
+            }
 
-                .ellipsis-text {
-                    display: table-cell;
-                    flex-grow: 1;
-                    vertical-align: middle;
-                    height: auto;
-                    width: 235px;
-                    text-overflow();
-                }
+            .ellipsis-text {
+                display: inline;
+                flex-grow: 1;
+                vertical-align: middle;
+                height: auto;
+                max-width: 100%;
+                .text-overflow();
             }
         }
     }
