--- a/jenkins-design-language/less/components/jtable.less
+++ b/jenkins-design-language/less/components/jtable.less
@@ -109,11 +109,11 @@ a.JTable-row--href {
     align-items: center;
     width: 100%;
     height: 100%;
-    text-overflow();
+    .text-overflow();
 
     > code,
     .text-with-ellipsis-container {
-        text-overflow();
+        .text-overflow();
     }
 }
 
