change overflow ellipsis mixin name as suggested

--- a/jenkins-design-language/less/components/jtable.less
+++ b/jenkins-design-language/less/components/jtable.less
@@ -109,10 +109,10 @@ a.JTable-row--href {
     align-items: center;
     width: 100%;
     height: 100%;
-    .text-overflow();
+    .overflow-ellipsis();
 
     .text-with-ellipsis-container {
-        .text-overflow();
+        .overflow-ellipsis();
     }
 }
 
