--- a/blueocean-dashboard/src/main/less/mixins/overflow-ellipsis.less
+++ b/blueocean-dashboard/src/main/less/mixins/overflow-ellipsis.less
@@ -2,7 +2,7 @@
 // Requires inline-block or block for proper styling
 // Works with flexbox as well as long as the min-width property is set to something else than the default 100% that is set for flexbox
 
-.text-overflow() {
+.overflow-ellipsis() {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
