--- a/blueocean-dashboard/src/main/less/run-message-cell.less
+++ b/blueocean-dashboard/src/main/less/run-message-cell.less
@@ -11,7 +11,7 @@
         flex: 1;
         max-width: 100%;
         height: 100%;
-        .text-overflow();
+        .overflow-ellipsis();
 
         a {
             display: flex;
@@ -19,7 +19,7 @@
             align-items: center;
             height: 100%;
             max-width: 100%;
-            .text-overflow();
+            .overflow-ellipsis();
 
             &:first-child {
                 flex-shrink: 0;
@@ -41,7 +41,7 @@
                 vertical-align: middle;
                 height: auto;
                 max-width: 100%;
-                .text-overflow();
+                .overflow-ellipsis();
             }
         }
     }
