add generic error reporting for failed input step

--- a/blueocean-dashboard/src/main/less/forms/index.less
+++ b/blueocean-dashboard/src/main/less/forms/index.less
@@ -45,6 +45,11 @@
             margin-top: 24px;
             margin-right: 8px;
         }
+
+        .errorContainer {
+            margin-top: 10px;
+            color: @brand-danger;
+        }
     }
 
 }
