fix layout of step list when clicking through to a nested step

--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -385,7 +385,7 @@
         position: relative;
     }
 
-    .editor-step.nested {
+    .editor-step.is-container .editor-step.nested {
         margin-left: @step-padding-lr;
         width: calc(~"100% - @{step-padding-lr}"); // prevent cards hanging over right edge
     }
