--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -546,6 +546,10 @@
         }
     }
 
+    .editor-step.nested.is-container .editor-step-list-drop-zone.last-child {
+        bottom: -@step-padding-tb;
+    }
+
     .editor-step-list-drop-zone.is-drop-allowed {
         &.before-item {
             box-shadow: inset 0 3px 0 @brand-color;
