hide the stage's "last child" drop zone until the user begins dragging

--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -565,6 +565,12 @@
         position: static;
         border: 1px solid @hr-color;
         border-top-width: 0;
+        background: #fff;
+        display: none;
+    }
+
+    .is-performing-drag .editor-steps > .editor-step-list-drop-zone.last-child {
+        display: block;
     }
 
     .editor-step-content.is-dragging {
