--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -555,8 +555,11 @@
             box-shadow: inset 0 3px 0 @brand-color;
         }
 
-        &.after-item, &.first-child, &.last-child {
+        &.after-item, &.first-child {
             box-shadow: inset 0 -3px 0 @brand-color;
+        }
+        &.last-child {
+            background: @brand-color;
         }
     }
 
@@ -571,6 +574,10 @@
 
     .is-performing-drag .editor-steps > .editor-step-list-drop-zone.last-child {
         display: block;
+
+        &.is-drop-allowed {
+            background: @brand-color;
+        }
     }
 
     .editor-step-content.is-dragging {
