don't allow log lines to expand bigger than their container

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -319,6 +319,7 @@ a.pipelineRedirectLink svg {
         color: @pre-color;
         padding-left: 22px;
         padding-right: 15px;
+        max-width: 100%;
     }
 }
 
