Feature/jenkins 38323 editor drag and drop 3 (#1619)
* use js-builder-jest for tests in blueocean-pipeline-editor module

* POC of DnD in the editor albeit with some limitations (dragging before and after container steps can be problematic if in first or last position, respectively)

* only show the drag handle on hover

* drag and drop now allows flexible placement of item via "drop zone" targets at the end of lists; need to proof UX before some additional tests and refactoring

* fix a bug where adding a new block-level step threw NPE for stage

* prevent dragging a block-level step into itself or other block-level steps nested inside of it

* test coverage and jsdoc for new PipelineStore methods

* hide the "no child steps" message for a block level step during drag and drop

* prevent clicking on the drag handle from opening step

* give the original step being dragged a different visual cue

* new design for pipeline steps; new drag and drop impl that removes visual drop zones and allows more precise placement

* unused

* clean up comments

* remove irritating tooltip

* fix a bug in Safari where moving left/right over drag handle would cause width of step container to jitter

* clean up and remove some logging statements

* cleanup

* fix missing label by making Accordion able to derive label from "title" or "data-label" attribute

* fix layout of step list when clicking through to a nested step

* wire up drag and drop interactions for step list after having clicked through to nested step

* remove obsolete css

* reorganizing css for clarity

* fix position of "last child" drop zone for a nested block-level step

* hide the stage's "last child" drop zone until the user begins dragging

* remove unused child step icon

* use a lookup table for css class names so they are more discoverable

* use a more obvious visual cue for dragging over the "last child' drop zones

* rename file extension

* fix doubl

--- a/blueocean-pipeline-editor/src/main/less/editor.less
+++ b/blueocean-pipeline-editor/src/main/less/editor.less
@@ -17,6 +17,9 @@
 @font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-header: "LatoLatinWebMedium", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
+@step-padding-tb: 11px;
+@step-padding-lr: 16px;
+
 // TODO: Make these ^^^ use the JDL variables
 
 .pipeline-editor {
@@ -326,24 +329,37 @@
                 top: 0;
             }
         }
+
+        &.is-container {
+            border-left: 1px solid @hr-color;
+            border-bottom: 1px solid @hr-color;
+            padding-bottom: @step-padding-tb;
+        }
+    }
+
+    .editor-step + .editor-step .editor-step-content {
+        border-top-width: 0;
+    }
+
+    .editor-step.is-container .editor-step:nth-child(2) .editor-step-content {
+        border-top-width: 1px;
     }
 
     .editor-step-errors {
         color: @error-highlight;
     }
 
-    .editor-step-grab {
-        background: @grab-color;
-        display: flex;
-        align-items: center;
-        cursor: -webkit-grab;
-        cursor: grab;
-    }
-
     .editor-step-main {
         width: 100%;
+    }
+
+    .editor-step-content {
         border: 1px solid @hr-color;
-        border-width: 0 1px;
+        border-right-width: 0;
+    }
+
+    .editor-step.is-container > .editor-step-main > .editor-step-content {
+        border: 0;
     }
 
     .editor-step.selected > .editor-step-main {
@@ -351,14 +367,17 @@
     }
 
     .editor-step-content {
-        padding: 11px 16px;
+        padding: @step-padding-tb @step-padding-lr;
         cursor: pointer;
         position: relative;
-        border-bottom: 1px solid @hr-color;
 
         &:hover, &:active, &:focus {
             background: @light-blue-bg;
         }
+    }
+
+    .editor-steps > .editor-step {
+        border-right: 1px solid @hr-color;
     }
 
     .editor-step .editor-step .editor-step-main { // nested steps
@@ -366,9 +385,9 @@
         position: relative;
     }
 
-    .editor-step.nested .editor-step-main { // child steps
-        border-left-width: 24px;
-        position: relative;
+    .editor-step.is-container .editor-step.nested {
+        margin-left: @step-padding-lr;
+        width: calc(~"100% - @{step-padding-lr}"); // prevent cards hanging over right edge
     }
 
     .editor-steps > .editor-step.missing .editor-step-content { // top-level 'no children' step
@@ -407,10 +426,6 @@
     // updated editor steps in the config panel
     .editor-steps > .editor-step:first-child > .editor-step-main {
         border-top: solid 1px @hr-color;
-    }
-
-    .editor-step-grab {
-        display: none;
     }
 
 
@@ -486,6 +501,96 @@
 
     .editor-steps > .editor-step:first-child > .editor-step-main > div > .editor-step-child-icon {
         margin-top: -8px;
+    }
+
+    //--[ Step Drag and Drop ]----------------------------------------------------------------------------------------------------
+
+    .editor-step-drag {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        cursor: -webkit-grab;
+
+        display: flex;
+        align-items: center;
+        visibility: hidden;
+
+        svg {
+            fill: @grab-color;
+            margin-right: 6px;
+        }
+    }
+
+    .editor-step-content:hover .editor-step-drag {
+        // show drag handle using visibility to avoid a horizontal layout jitter in Safari 11
+        visibility: visible;
+    }
+
+    .editor-step-list-drop-zone {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 31px;
+
+        &.before-item {
+            top: 0;
+        }
+
+        &.after-item, &.first-child, &.last-child {
+            bottom: 0;
+        }
+
+        &.last-child {
+            height: @step-padding-tb;
+        }
+    }
+
+    .editor-step.nested.is-container .editor-step-list-drop-zone.last-child {
+        bottom: -@step-padding-tb;
+    }
+
+    .editor-step-list-drop-zone.is-drop-allowed {
+        &.before-item {
+            box-shadow: inset 0 3px 0 @brand-color;
+        }
+
+        &.after-item, &.first-child {
+            box-shadow: inset 0 -3px 0 @brand-color;
+        }
+        &.last-child {
+            background: @brand-color;
+        }
+    }
+
+    // special handling for drag target at end of stage
+    .editor-steps > .editor-step-list-drop-zone.last-child {
+        position: static;
+        border: 1px solid @hr-color;
+        border-top-width: 0;
+        background: #fff;
+        display: none;
+    }
+
+    .is-performing-drag .editor-steps > .editor-step-list-drop-zone.last-child {
+        display: block;
+
+        &.is-drop-allowed {
+            background: @brand-color;
+        }
+    }
+
+    .editor-step-content.is-dragging {
+        background-color: transparent;
+        box-shadow: inset 0 0 5px @grab-color;
+
+        // if container is being dragged, hide any of its nested steps / drop zones
+        & ~ .editor-step.nested {
+            display: none;
+        }
+        & ~ .editor-step-list-drop-zone {
+            display:none;
+        }
     }
 
 
