--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -332,3 +332,7 @@ a.pipelineRedirectLink svg {
 .activity .run-button-component {
     margin-bottom: 16px;
 }
+
+.search-pipelines-input .clear-icon-container svg[icon="ContentClear"] {
+    fill: rgba(255, 255, 255, 0.6);
+}
