--- a/blueocean-personalization/src/main/less/pipeline-card.less
+++ b/blueocean-personalization/src/main/less/pipeline-card.less
@@ -130,8 +130,27 @@
         text-align: left;
     }
 
-    .actions > *+* {
-        margin-left:8px;
+    .actions .actions-container {
+        position: relative;
+
+        &:after {
+            position: absolute;
+            content: " ";
+            pointer-events: none;
+            top: 0;
+            right: 24px;
+            width: calc(100% - 24px);
+            height: 100%;
+        }
+
+        > div {
+            height: 24px;
+            vertical-align: middle;
+
+            &:not(:first-child) {
+                margin-left: 8px;
+            }
+        }
     }
 
     /*
@@ -147,13 +166,6 @@
         flex-basis: 20px;
         height: 20px;
         width: 20px;
-        overflow: hidden;
-    }
-
-    .actions > * {
-        height: 24px;
-        width: 24px;
-        flex-basis: 24px;
         overflow: hidden;
     }
 }
