--- a/blueocean-dashboard/src/main/less/forms/index.less
+++ b/blueocean-dashboard/src/main/less/forms/index.less
@@ -30,6 +30,7 @@
     .inputBody {
         max-width: 400px;
         min-width: 400px;
+        white-space: pre-wrap;
 
         h3 {
             padding-bottom: 24px;
