feature/JENKINS-47247-https-roundtrip-3 * Still have a couple of loose ends in the editor, need to rebase

--- a/blueocean-dashboard/src/main/less/creation/git.less
+++ b/blueocean-dashboard/src/main/less/creation/git.less
@@ -11,6 +11,10 @@
         width: 100%;
     }
 
+    .credentials-selection-git {
+        margin-bottom: 10px;
+    }
+
     .dropdown-credentials {
         margin-right: 10px;
 
