add next/prev links to run details screen

--- a/blueocean-dashboard/src/main/less/run-details-header.less
+++ b/blueocean-dashboard/src/main/less/run-details-header.less
@@ -12,8 +12,12 @@
     }
 }
 
-.RunDetailsHeader-title > span {
+.RunDetailsHeader-title .run-nav-container {
     vertical-align: middle;
+
+    span:first-child {
+        margin-left: 10px;
+    }
 }
 
 .RunDetailsHeader-sources,
