--- a/jenkins-design-language/less/components/material-icon.less
+++ b/jenkins-design-language/less/components/material-icon.less
@@ -1,6 +1,6 @@
 .svg-icon {
-    display: 'inline-block';
-    vertical-align: 'middle';
-    user-select: 'none';
+    display: inline-block;
+    vertical-align: middle;
+    user-select: none;
     fill: #ffffff;
 }
