make branch selector icon clickable

--- a/blueocean-dashboard/src/main/less/forms/column-filter.less
+++ b/blueocean-dashboard/src/main/less/forms/column-filter.less
@@ -10,6 +10,7 @@
         .Icon-filter {
             left: auto;
             right: 10px;
+            pointer-events: none;
 
             svg {
                 fill: #bbcdd5;
