change the pipeline selection highlight as requested in JENKINS-50408

--- a/jenkins-design-language/less/components/result-status.less
+++ b/jenkins-design-language/less/components/result-status.less
@@ -296,7 +296,7 @@
 .pipeline-selection-highlight circle {
     fill: none; //@brand-selection;
     //stroke: @brand-selection;
-    stroke: @brand-grey-lite;
+    stroke: @brand-primary;
 }
 
 //--[ /PipelineGraph ]-----------------------------------------------------------
