--- a/jenkins-design-language/less/components/jtable.less
+++ b/jenkins-design-language/less/components/jtable.less
@@ -120,6 +120,7 @@ a.JTable-row--href {
 
         .ParametersRunButton,
         .history-button-component,
+        .Favorite,
         .jenkins-pipeline-branches-list-action,
         .jenkins-pipeline-branches-list-action > div {
             display: inline-block;
