remove pipeline editor ext point

--- a/blueocean-dashboard/src/main/less/extensions.less
+++ b/blueocean-dashboard/src/main/less/extensions.less
@@ -26,3 +26,4 @@
 @import "tables";
 @import "pipeline-run-graph";
 @import "tab-badge-icon";
+@import "../../../../blueocean-pipeline-editor/src/main/less/extensions";
