add jdl css to webpack css bundle

--- a/jenkins-design-language/less/icons.less
+++ b/jenkins-design-language/less/icons.less
@@ -25,7 +25,7 @@
 }
 
 .icon(weather-sunny, "Sunny.svg");
-.icon(weather-partially-sunny, "Partially Sunny.svg");
+.icon(weather-partially-sunny, "PartiallySunny.svg");
 .icon(weather-cloudy, "Cloudy.svg");
 .icon(weather-raining, "Raining.svg");
 .icon(weather-storm, "Storm.svg");
