mock the i18n function and comment out the octicons in jdl

--- a/jenkins-design-language/less/theme.less
+++ b/jenkins-design-language/less/theme.less
@@ -9,7 +9,7 @@
 //
 @import (inline) "../node_modules/normalize.css/normalize.css";
 @import (inline) "../fonts/latofonts.css";
-@import (inline) "../node_modules/octicons/build/font/octicons.css";
+//@import (inline) "../node_modules/octicons/build/font/octicons.css";
 
 //
 // Load core variables and mixins
