remove extensions related code

--- a/blueocean-dashboard/src/main/less/extensions.less
+++ b/blueocean-dashboard/src/main/less/extensions.less
@@ -26,5 +26,5 @@
 @import "tables";
 @import "pipeline-run-graph";
 @import "tab-badge-icon";
-@import "favorites/extensions";
+@import "favorites/pipeline-card";
 @import "../../../../blueocean-pipeline-editor/src/main/less/extensions";
