--- a/jenkins-design-language/less/components/empty-state.less
+++ b/jenkins-design-language/less/components/empty-state.less
@@ -50,6 +50,6 @@
 .noun-icon(@className) {
   @escapedFilename: escape(@className);
   &.@{className} {
-    background: url("../icons/nounproject/@{escapedFilename}.svg") no-repeat right center;
+    background: url("../../icons/nounproject/@{escapedFilename}.svg") no-repeat right center;
   }
 }
