add "disable job" btn

--- a/blueocean-core-js/src/less/variables.less
+++ b/blueocean-core-js/src/less/variables.less
@@ -79,3 +79,11 @@
         fill: @action-button--hover;
     }
 }
+
+.disable-job-button {
+    float: right;
+
+    svg {
+        fill: @brand-primary;
+    }
+}
