--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -51,6 +51,7 @@ button.btn-show-more {
 .changeset-table {
     margin-left:auto;
     margin-right:auto;
+    margin-bottom: 20px;
 }
 
 .artifacts-table {
