--- a/jenkins-design-language/less/components/text-input.less
+++ b/jenkins-design-language/less/components/text-input.less
@@ -7,7 +7,7 @@ input[type="text"] {
 
 .TextInput, .PasswordInput {
     .TextInput-medium;
-    display: inline-block;
+    display: block;
     position: relative;
     background-color: #fff;
 
