--- a/jenkins-design-language/less/theme.less
+++ b/jenkins-design-language/less/theme.less
@@ -464,6 +464,7 @@ button, input, optgroup, select, textarea {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .log-header__section {
