--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -279,10 +279,11 @@ a.pipelineRedirectLink svg {
             justify-content: center;
         }
     }
-    p {
+    span.log-row {
         padding: 0 15px 0 55px;
         margin: 0;
         min-height: 16px;
+        display: block;
 
         .log-boxes {
             display: flex;
